# SyncMVD

./: .gitignore  README.md  pyproject.toml  run_experiment.py  visualize.py
src/: configs.py  pipeline.py  utils.py
src/renderer/: project.py
src/syncmvd/: prompt.py  step.py
